[package]
name = "rust_gamedev"
version = "0.1.0"
authors = ["Nathan Craike <ncraike@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"
ggez = "0.5.0-rc.2"
nalgebra = {version = "0.18", features = ["mint"] }
