[package]
name = "rust_gamedev"
version = "0.1.0"
authors = ["Nathan Craike <ncraike@gmail.com>"]
edition = "2018"

[lib]
name = "rust_gamedev"
path = "src/lib.rs"

[[bin]]
name = "rust_gamedev"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
